# artificial_birds

./: .gitignore  generate_make_files.bat  premake4.lua
artificial_birds/: ArtificialBirds.cpp  ArtificialBirds.h  BigBird.cpp  BigBird.h  BigBirdConstructionInfo.h  BigBirdLocalParams.h  BigFeather.cpp  BigFeather.h  Bird.h  BirdDemo.cpp  BirdDemo.h  BirdOptimizer.cpp  BirdOptimizer.h  CPG.h  MetricDetails.h  main.cpp  premake4.lua  proto_helper.cpp  wingbeat_pattern-inl.h
bullet/Demos/ArtificialBirds/: ArtificialBirds.cpp  ArtificialBirds.h  BigBird.cpp  BigBird.h  BigBirdConstructionInfo.h  BigFeather.cpp  BigFeather.h  BirdOptimizer.cpp  BirdOptimizer.h  CMakeLists.txt  Makefile.am  main.cpp
bullet/Demos/ArtificialBirds/AMD/: premake4.lua
dslin/: appa.txt  appc.txt  contents.txt  disaps.bat  discpp.h  discpp.lib  disdrv.bat  disgif.bat  disimg.bat  dislin.h  dislin.inf  dislin_d.h  dislnc.lib  dislnc_d.lib  dismov.bat  distif.bat  disvc.lib  disvc_d.lib  disvcd.lib  disvcd_d.lib  disvcm.lib  disvcm_d.lib  exa_c.c  exa_cpp.cpp  hlp0.txt  hlp10.txt  hlp11.txt  hlp12.txt  hlp13.txt  hlp14.txt  hlp15.txt  hlp16.txt  hlp3.txt  hlp4.txt  hlp5.txt  hlp6.txt  hlp6_1.txt  hlp6_2.txt  hlp7.txt  hlp8.txt  (+22 more)
experiment_tools/: plot_cum_energy.cpp  premake4.lua
proto/: compile_proto.bat  proto.pb.cc  proto.pb.h  proto.proto  proto_helper-inl.h  proto_helper.h  wingbeat_pattern-test.cpp  wingbeat_pattern-test.lua  wingbeat_pattern.pb.cc  wingbeat_pattern.pb.h  wingbeat_pattern.proto
vs2010/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BULLET_PHYSICS.sln  CMakeCache.txt  (+3 more)
(+191 files in other folders)
